<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".physicsForms">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/topic_1_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mru_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/physics_1_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/mrua_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/physics_2_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/mru_button"
        app:layout_constraintStart_toStartOf="@+id/mru_button"
        app:layout_constraintTop_toBottomOf="@+id/mru_button" />

    <Button
        android:id="@+id/clibre_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/physics_3_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/mrua_button"
        app:layout_constraintStart_toStartOf="@+id/mrua_button"
        app:layout_constraintTop_toBottomOf="@+id/mrua_button" />

    <Button
        android:id="@+id/dinamica_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/physics_4_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/clibre_button"
        app:layout_constraintStart_toStartOf="@+id/clibre_button"
        app:layout_constraintTop_toBottomOf="@+id/clibre_button" />

    <Button
        android:id="@+id/choques_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/physics_5_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/dinamica_button"
        app:layout_constraintStart_toStartOf="@+id/dinamica_button"
        app:layout_constraintTop_toBottomOf="@+id/dinamica_button" />
</androidx.constraintlayout.widget.ConstraintLayout>