<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FORMS">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tittle_1_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fisica_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/topic_1_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/matematicas_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topic_2_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/fisica_button"
        app:layout_constraintStart_toStartOf="@+id/fisica_button"
        app:layout_constraintTop_toBottomOf="@+id/fisica_button" />

    <Button
        android:id="@+id/calculo_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topic_3_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/matematicas_button"
        app:layout_constraintStart_toStartOf="@+id/matematicas_button"
        app:layout_constraintTop_toBottomOf="@+id/matematicas_button" />

    <Button
        android:id="@+id/cpp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topic_4_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/calculo_button"
        app:layout_constraintStart_toStartOf="@+id/calculo_button"
        app:layout_constraintTop_toBottomOf="@+id/calculo_button" />

    <Button
        android:id="@+id/python_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topic_5_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cpp_button"
        app:layout_constraintStart_toStartOf="@+id/cpp_button"
        app:layout_constraintTop_toBottomOf="@+id/cpp_button" />

    <ImageView
        android:id="@+id/formImagen"
        android:layout_width="63dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@+id/fisica_button"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>