<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationBluetoothControl">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/Information_7_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton15"
        app:layout_constraintStart_toEndOf="@+id/imageButton15"
        app:layout_constraintTop_toTopOf="@+id/imageButton15" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/Information_6_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton14"
        app:layout_constraintStart_toEndOf="@+id/imageButton14"
        app:layout_constraintTop_toTopOf="@+id/imageButton14" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/Information_5_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton13"
        app:layout_constraintStart_toEndOf="@+id/imageButton13"
        app:layout_constraintTop_toTopOf="@+id/imageButton13" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/Information_4_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton11"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="@+id/imageButton11" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/Information_3_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton10"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toTopOf="@+id/imageButton10" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/Information_2_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="@+id/imageButton9" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton14"
        app:layout_constraintStart_toStartOf="@+id/imageButton14"
        app:layout_constraintTop_toBottomOf="@+id/imageButton14"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton13"
        app:layout_constraintStart_toStartOf="@+id/imageButton13"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton11"
        app:layout_constraintStart_toStartOf="@+id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11"
        app:srcCompat="@android:drawable/presence_invisible" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:rotation="-90"
        android:rotationX="0"
        app:layout_constraintEnd_toEndOf="@+id/imageButton10"
        app:layout_constraintStart_toStartOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:rotation="90"
        android:rotationX="0"
        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:rotation="0"
        android:rotationX="0"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="180dp"
        android:rotation="0"
        android:rotationX="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tittle_2_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Information_1_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toTopOf="@+id/imageButton8" />
</androidx.constraintlayout.widget.ConstraintLayout>