<?xml version="1.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mass_converter">

    <TextView
        android:id="@+id/indicacion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/converter_6_text"
        app:layout_constraintEnd_toEndOf="@+id/tituloDeConversion"
        app:layout_constraintStart_toStartOf="@+id/tituloDeConversion"
        app:layout_constraintTop_toBottomOf="@+id/tituloDeConversion" />

    <TextView
        android:id="@+id/tituloDeConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="168dp"
        android:text="@string/converter_7_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/longitudeConversionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="144dp"
        android:text="@string/converter_4_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicacion1" />

    <EditText
        android:id="@+id/unidadAConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/indicacion1"
        app:layout_constraintStart_toStartOf="@+id/indicacion1"
        app:layout_constraintTop_toBottomOf="@+id/indicacion1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/unidadConvertida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/longitudeConversionBtn"
        app:layout_constraintStart_toStartOf="@+id/longitudeConversionBtn"
        app:layout_constraintTop_toBottomOf="@+id/longitudeConversionBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
